--- a/index.html
+++ b/index.html
@@ -692,7 +692,46 @@
             <div class="section-title">
               <p>featured authors</p>
             </div>
-            <ul class="featured-authors-list">
+            <ul class="featured-authors-list col-gap-m">
+              <li class="featured-authors-item row-gap-m">
+                <h3>
+                  <i class="fa-regular fa-circle-user"></i>
+                </h3>
+                <div class="featured-authors-text col">
+                  <p class="bold">Grace Bennett</p>
+                  <ul class="row">
+                    <li class="body-s">Urban</li>
+                    <li class="body-s">&nbsp;·&nbsp;</li>
+                    <li class="body-s">Cultural</li>
+                  </ul>
+                </div>
+              </li>
+              <li class="featured-authors-item row-gap-m">
+                <h3>
+                  <i class="fa-regular fa-circle-user"></i>
+                </h3>
+                <div class="featured-authors-text col">
+                  <p class="bold">Grace Bennett</p>
+                  <ul class="row">
+                    <li class="body-s">Urban</li>
+                    <li class="body-s">&nbsp;·&nbsp;</li>
+                    <li class="body-s">Cultural</li>
+                  </ul>
+                </div>
+              </li>
+              <li class="featured-authors-item row-gap-m">
+                <h3>
+                  <i class="fa-regular fa-circle-user"></i>
+                </h3>
+                <div class="featured-authors-text col">
+                  <p class="bold">Grace Bennett</p>
+                  <ul class="row">
+                    <li class="body-s">Urban</li>
+                    <li class="body-s">&nbsp;·&nbsp;</li>
+                    <li class="body-s">Cultural</li>
+                  </ul>
+                </div>
+              </li>
               <li class="featured-authors-item row-gap-m">
                 <h3>
                   <i class="fa-regular fa-circle-user"></i>
