card-aside - adjust height

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
 
 
       <!-- Section: explore -->
-      <section id="explore" class="section-container">
+      <section id="explore" class="section-container row-gap-m">
 
         <!-- Inspirations -->
           <div id="inspirations" class="section-aside col-gap-m">
