--- a/index.html
+++ b/index.html
@@ -687,68 +687,81 @@
             </ul>
           </div>
 
+          <!-- Aside -->
+          <div id="explore-aside" class="col-gap-m">
           <!-- Fatured Authors -->
-          <div id="featured-authors" class="section-aside col-gap-m">
-            <div class="section-title">
-              <p>featured authors</p>
+            <div id="featured-authors" class="section-aside col-gap-m">
+              <div class="section-title">
+                <p>featured authors</p>
+              </div>
+              <ul class="featured-authors-list col-gap-m">
+                <li class="featured-authors-item row-gap-m">
+                  <h3>
+                    <i class="fa-regular fa-circle-user"></i>
+                  </h3>
+                  <div class="featured-authors-text col">
+                    <p class="bold">Grace Bennett</p>
+                    <ul class="row">
+                      <li class="body-s">Urban</li>
+                      <li class="body-s">&nbsp;·&nbsp;</li>
+                      <li class="body-s">Cultural</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="featured-authors-item row-gap-m">
+                  <h3>
+                    <i class="fa-regular fa-circle-user"></i>
+                  </h3>
+                  <div class="featured-authors-text col">
+                    <p class="bold">Grace Bennett</p>
+                    <ul class="row">
+                      <li class="body-s">Urban</li>
+                      <li class="body-s">&nbsp;·&nbsp;</li>
+                      <li class="body-s">Cultural</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="featured-authors-item row-gap-m">
+                  <h3>
+                    <i class="fa-regular fa-circle-user"></i>
+                  </h3>
+                  <div class="featured-authors-text col">
+                    <p class="bold">Grace Bennett</p>
+                    <ul class="row">
+                      <li class="body-s">Urban</li>
+                      <li class="body-s">&nbsp;·&nbsp;</li>
+                      <li class="body-s">Cultural</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="featured-authors-item row-gap-m">
+                  <h3>
+                    <i class="fa-regular fa-circle-user"></i>
+                  </h3>
+                  <div class="featured-authors-text col">
+                    <p class="bold">Grace Bennett</p>
+                    <ul class="row">
+                      <li class="body-s">Urban</li>
+                      <li class="body-s">&nbsp;·&nbsp;</li>
+                      <li class="body-s">Cultural</li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+              <div class="featured-authors-viewAll component-viewAll row">
+              </div>
+          </div>
+
+            <!-- Ad -->
+            <div id="ad" class="section-aside col-gap-m">
+              <div class="section-title">
+                <p>ad</p>
+              </div>
+              <a href="#" class="section-img">
+                <img src="./data/insights/thumbnail/test.jpg" />
+              </a>
             </div>
-            <ul class="featured-authors-list col-gap-m">
-              <li class="featured-authors-item row-gap-m">
-                <h3>
-                  <i class="fa-regular fa-circle-user"></i>
-                </h3>
-                <div class="featured-authors-text col">
-                  <p class="bold">Grace Bennett</p>
-                  <ul class="row">
-                    <li class="body-s">Urban</li>
-                    <li class="body-s">&nbsp;·&nbsp;</li>
-                    <li class="body-s">Cultural</li>
-                  </ul>
-                </div>
-              </li>
-              <li class="featured-authors-item row-gap-m">
-                <h3>
-                  <i class="fa-regular fa-circle-user"></i>
-                </h3>
-                <div class="featured-authors-text col">
-                  <p class="bold">Grace Bennett</p>
-                  <ul class="row">
-                    <li class="body-s">Urban</li>
-                    <li class="body-s">&nbsp;·&nbsp;</li>
-                    <li class="body-s">Cultural</li>
-                  </ul>
-                </div>
-              </li>
-              <li class="featured-authors-item row-gap-m">
-                <h3>
-                  <i class="fa-regular fa-circle-user"></i>
-                </h3>
-                <div class="featured-authors-text col">
-                  <p class="bold">Grace Bennett</p>
-                  <ul class="row">
-                    <li class="body-s">Urban</li>
-                    <li class="body-s">&nbsp;·&nbsp;</li>
-                    <li class="body-s">Cultural</li>
-                  </ul>
-                </div>
-              </li>
-              <li class="featured-authors-item row-gap-m">
-                <h3>
-                  <i class="fa-regular fa-circle-user"></i>
-                </h3>
-                <div class="featured-authors-text col">
-                  <p class="bold">Grace Bennett</p>
-                  <ul class="row">
-                    <li class="body-s">Urban</li>
-                    <li class="body-s">&nbsp;·&nbsp;</li>
-                    <li class="body-s">Cultural</li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-            <div class="featured-authors-viewAll component-viewAll row">
-            </div>
-        </div>
+          </div>
       </section>
 
 
