cover - load data

--- a/index.html
+++ b/index.html
@@ -105,26 +105,7 @@
       <div class="highlights--wrapper">
         
         <!-- Section: Coverage -->
-        <section id="cover">
-          <div class="cover__wrapper-bg col bg--img" style="--img-url: url(../../data/insights/thumbnail/test.jpg)">
-            <div class="cover__wrapper col gap--m tc--white">
-              <div class="topic__wrapper">
-                <span class="topic--white ts--btn">topic</span>
-              </div>
-              <h1 class="cover__headline serif">
-                Building Dreams: Exploring the Timeless Beauty of Architecture
-              </h1>
-              <div class="slider__controller row gap--m">
-                <a href="#" class="controller__btn btn--circle-l">
-                  <i class="fa-solid fa-chevron-left"></i>
-                </a>
-                <a href="#" class="controller__btn btn--circle-l">
-                  <i class="fa-solid fa-chevron-right"></i>
-                </a>
-              </div>
-            </div>
-        </div>
-        </section>
+        <section id="cover"></section>
 
         <!-- Editor's Pick -->
         <section id="editorsPick" class="col gap--m">
