cover - height stretch

--- a/index.html
+++ b/index.html
@@ -104,18 +104,16 @@
       <!-- Highlights -->
       <div class="highlights--wrapper">
         <!-- Section: Coverage -->
-        <section>
-          <div id="cover" class="col">
-            <!-- [cover__bg] -->
-            <!-- [cover__txt] -->
-            <div class="cover__slide-controller slide-controller row gap--m">
-              <button class="slide-controller__btn btn--circle-l">
-                <i class="fa-solid fa-chevron-left"></i>
-              </button>
-              <button href="#" class="slide-controller__btn btn--circle-l">
-                <i class="fa-solid fa-chevron-right"></i>
-              </button>
-            </div>
+        <section id="cover" class="col">
+          <!-- [cover__bg] -->
+          <!-- [cover__txt] -->
+          <div class="cover__slide-controller slide-controller row gap--m">
+            <button class="slide-controller__btn btn--circle-l">
+              <i class="fa-solid fa-chevron-left"></i>
+            </button>
+            <button href="#" class="slide-controller__btn btn--circle-l">
+              <i class="fa-solid fa-chevron-right"></i>
+            </button>
           </div>
         </section>
 
