editorspick - data loading

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <script src="./assets/js/util.js"></script>
 
     <script src="./assets/js/top-topics.js"></script>
-    <script src="./assets/js/posts.js"></script>
+    <script src="./assets/js/insights.js"></script>
 
     <script src="./assets/js/view-all.js"></script>
     <script src="./assets/js/bookmark-add.js"></script>
@@ -129,41 +129,20 @@
             <!-- cover -->
             <div class="editorsPick__cover col gap--m">
               <div class="editorsPick__img section__img">
-                <img
-                  src="/data/insights/thumbnail/test.jpg"
-                  class="img--ratio-169"
-                />
+                <!-- [editorsPick__img] -->
                 <div class="component-bookmark-add"></div>
               </div>
               <div class="editorsPick__topic">
-                <a href="#" class="topic ts--btn">topic</a>
+                <!-- [editorsPick__topic] -->
               </div>
-              <a class="editorsPick__title serif hover--txt ts--h3" href="#">
-                From Vision to Reality: Unveiling the Marvels of Architectural
-                Ingenuity
-              </a>
+              <div class="editorsPick__title">
+                <!-- [editorsPick__title] -->
+              </div>
             </div>
             <!-- list -->
-            <div class="editorsPick__list-wrapper" class="col gap--m">
+            <div class="editorsPick__list-wrapper col gap--m">
               <ul class="editorsPick__list col gap--m">
-                <li class="editorsPick__list-item ts--h4 serif">
-                  <a href="#" class="editorsPick__list-txt hover--txt">
-                    Marvels of Modern Architecture: Inspiring Structures Shaping
-                    Our Cities
-                  </a>
-                </li>
-                <li class="editorsPick__list-item ts--h4 serif">
-                  <a href="#" class="editorsPick__list-txt hover--txt">
-                    Timeless Elegance: Exploring the Beauty of Architectural
-                    Masterpieces
-                  </a>
-                </li>
-                <li class="editorsPick__list-item ts--h4 serif">
-                  <a href="#" class="editorsPick__list-txt hover--txt">
-                    Designing the Future: Innovative Architecture Redefining
-                    Urban Landscapes
-                  </a>
-                </li>
+                <!-- [editorsPick__list-item] -->
               </ul>
               <div class="editorsPick__viewAll component-viewAll row end"></div>
             </div>
