top topics - refactoring

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
         <div class="section__title">
           <p>Top Topics</p>
         </div>
-        <div id="topTopics-content">
-          <ul class="topics-list">
-            <!-- [Loop Data] -->
+        <div class="section__content">
+          <ul class="topTopics__list topics__list">
+            <!-- [topic list] -->
           </ul>
         </div>
       </section>
@@ -905,7 +905,7 @@
           <div class="section__title">
             <p>topics</p>
           </div>
-          <ul class="topics-list col gap--s">
+          <ul class="topics__list col gap--s">
             <!-- [Loop Data] -->
           </ul>
         </div>
