awards - menu remove

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
 
+    <!-- Bootstrap icon from a CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
+      integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e"
+      crossorigin="anonymous"
+    />
+
     <!-- Global Bootstrap CSS -->
     <!-- <link
       rel="stylesheet"
@@ -84,7 +92,6 @@
         <img class="navbar__logo logo--white" src="assets/image/logo.png" />
         <div class="navbar__menu row gap--l tc--white">
           <a class="menu__item" href="#">Insights</a>
-          <a class="menu__item" href="#">Awards</a>
           <a class="menu__item" href="#">Quiz</a>
           <a class="menu__item" href="#">Authors</a>
           <a class="menu__item" href="#">Report</a>
@@ -166,7 +173,6 @@
       <section id="monthlyAwards" class="col gap--m container--m">
         <div class="section__title">
           <p>Monthly Awards</p>
-          <div class="component-viewAll"></div>
         </div>
         <div id="monthlyAwards-content">
           <div id="awards-list">
@@ -893,7 +899,6 @@
           </div>
           <div class="col gap--s">
             <a class="menu__item" href="#">Insights</a>
-            <a class="menu__item" href="#">Awards</a>
             <a class="menu__item" href="#">Quiz</a>
             <a class="menu__item" href="#">Authors</a>
             <a class="menu__item" href="#">Report</a>
